--- a/Tesseract Primer.ipynb
+++ b/Tesseract Primer.ipynb
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "print(pytesseract.image_to_string('blurring traditional/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif'))"
+    "print(pytesseract.image_to_string('blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif'))"
    ]
   },
   {
@@ -927,7 +927,7 @@
    "outputs": [],
    "source": [
     "# Get verbose data including boxes, confidences, line and page numbers\n",
-    "confidence_table= pytesseract.image_to_data('blurring traditional/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif', output_type='data.frame')"
+    "confidence_table= pytesseract.image_to_data('blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif', output_type='data.frame')"
    ]
   },
   {
@@ -1188,7 +1188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_string = pytesseract.image_to_string(Image.open('blurring traditional/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif'))"
+    "sample_string = pytesseract.image_to_string(Image.open('blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif'))"
    ]
   },
   {
