--- a/Tesseract Primer.ipynb
+++ b/Tesseract Primer.ipynb
@@ -20,29 +20,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pytesseract\n",
-      "  Downloading pytesseract-0.3.13-py3-none-any.whl (14 kB)\n",
-      "Requirement already satisfied: Pillow>=8.0.0 in /opt/anaconda3/lib/python3.8/site-packages (from pytesseract) (8.2.0)\n",
-      "Collecting packaging>=21.3\n",
-      "  Downloading packaging-24.1-py3-none-any.whl (53 kB)\n",
-      "\u001b[K     |████████████████████████████████| 53 kB 1.8 MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: packaging, pytesseract\n",
-      "  Attempting uninstall: packaging\n",
-      "    Found existing installation: packaging 20.9\n",
-      "    Uninstalling packaging-20.9:\n",
-      "      Successfully uninstalled packaging-20.9\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "rasa 2.6.2 requires joblib<0.16.0,>=0.15.1, but you have joblib 1.1.0 which is incompatible.\n",
-      "rasa 2.6.2 requires networkx<2.6,>=2.4, but you have networkx 2.6.3 which is incompatible.\n",
-      "rasa 2.6.2 requires numpy<1.19,>=1.16, but you have numpy 1.21.2 which is incompatible.\n",
-      "rasa 2.6.2 requires packaging<21.0,>=20.0, but you have packaging 24.1 which is incompatible.\n",
-      "rasa 2.6.2 requires prompt-toolkit<3.0,>=2.0, but you have prompt-toolkit 3.0.20 which is incompatible.\n",
-      "rasa 2.6.2 requires regex<2020.10,>=2020.6, but you have regex 2021.8.3 which is incompatible.\n",
-      "rasa 2.6.2 requires SQLAlchemy<1.4.0,>=1.3.3, but you have sqlalchemy 1.4.22 which is incompatible.\n",
-      "rasa 2.6.2 requires tensorflow<2.4,>=2.3, but you have tensorflow 2.7.0 which is incompatible.\n",
-      "rasa 2.6.2 requires tensorflow-estimator<2.4,>=2.3, but you have tensorflow-estimator 2.7.0 which is incompatible.\n",
-      "rasa 2.6.2 requires tqdm<4.60,>=4.31, but you have tqdm 4.62.3 which is incompatible.\u001b[0m\n",
-      "Successfully installed packaging-24.1 pytesseract-0.3.13\n",
+      "Requirement already satisfied: pytesseract in c:\\users\\tfaires\\appdata\\local\\anaconda3\\lib\\site-packages (0.3.10)\n",
+      "Requirement already satisfied: packaging>=21.3 in c:\\users\\tfaires\\appdata\\local\\anaconda3\\lib\\site-packages (from pytesseract) (24.1)\n",
+      "Requirement already satisfied: Pillow>=8.0.0 in c:\\users\\tfaires\\appdata\\local\\anaconda3\\lib\\site-packages (from pytesseract) (9.4.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -61,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "eb5a483d",
    "metadata": {},
    "outputs": [],
@@ -71,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "67de28af",
    "metadata": {},
    "outputs": [],
@@ -81,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a81e018c",
    "metadata": {},
    "outputs": [],
@@ -94,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "08c68e7a",
    "metadata": {},
    "outputs": [],
@@ -117,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pytesseract.pytesseract.tesseract_cmd = r'C:\\\\Program Files\\\\Tesseract-ocr\\\\tesseract.exe'\n"
+    "pytesseract.pytesseract.tesseract_cmd = r'C:\\\\Program Files\\\\Tesseract-ocr\\\\tesseract.exe'\n"
    ]
   },
   {
@@ -138,9 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "08f9daf6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -327,16 +309,8 @@
     }
    ],
    "source": [
-    "print(pytesseract.image_to_string(Image.open('blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif')))"
+    "print(pytesseract.image_to_string(Image.open('blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif')))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d90d70b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -348,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "55b469d9",
    "metadata": {},
    "outputs": [
@@ -356,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['afr', 'amh', 'ara', 'asm', 'aze', 'aze_cyrl', 'bel', 'ben', 'bod', 'bos', 'bre', 'bul', 'cat', 'ceb', 'ces', 'chi_sim', 'chi_sim_vert', 'chi_tra', 'chi_tra_vert', 'chr', 'cos', 'cym', 'dan', 'deu', 'div', 'dzo', 'ell', 'eng', 'enm', 'epo', 'equ', 'est', 'eus', 'fao', 'fas', 'fil', 'fin', 'fra', 'frk', 'frm', 'fry', 'gla', 'gle', 'glg', 'grc', 'guj', 'hat', 'heb', 'hin', 'hrv', 'hun', 'hye', 'iku', 'ind', 'isl', 'ita', 'ita_old', 'jav', 'jpn', 'jpn_vert', 'kan', 'kat', 'kat_old', 'kaz', 'khm', 'kir', 'kmr', 'kor', 'kor_vert', 'lao', 'lat', 'lav', 'lit', 'ltz', 'mal', 'mar', 'mkd', 'mlt', 'mon', 'mri', 'msa', 'mya', 'nep', 'nld', 'nor', 'oci', 'ori', 'osd', 'pan', 'pol', 'por', 'pus', 'que', 'ron', 'rus', 'san', 'sin', 'slk', 'slv', 'snd', 'snum', 'spa', 'spa_old', 'sqi', 'srp', 'srp_latn', 'sun', 'swa', 'swe', 'syr', 'tam', 'tat', 'tel', 'tgk', 'tha', 'tir', 'ton', 'tur', 'uig', 'ukr', 'urd', 'uzb', 'uzb_cyrl', 'vie', 'yid', 'yor']\n"
+      "['eng', 'fra', 'osd']\n"
      ]
     }
    ],
@@ -374,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9498a4d4",
    "metadata": {},
    "outputs": [
@@ -898,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "54ae50d5",
    "metadata": {},
    "outputs": [],
@@ -921,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "a2ba4cbf",
    "metadata": {},
    "outputs": [],
@@ -932,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "e4dfd098",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1146,7 @@
        "[819 rows x 12 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,33 +1157,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8d34ce51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_string = pytesseract.image_to_string(Image.open('blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "5cc37dff",
+   "execution_count": 13,
+   "id": "cb16f0bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27"
+       "level                5\n",
+       "page_num             1\n",
+       "block_num           13\n",
+       "par_num              1\n",
+       "line_num            11\n",
+       "word_num             2\n",
+       "left              2014\n",
+       "top               1402\n",
+       "width              159\n",
+       "height              33\n",
+       "conf         96.038361\n",
+       "text           dilemma\n",
+       "Name: 600, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_string.find('heritage')"
+    "confidence_table.iloc[600]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1f3f8fca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Page number: 0\n",
+      "Orientation in degrees: 0\n",
+      "Rotate: 0\n",
+      "Orientation confidence: 27.39\n",
+      "Script: Latin\n",
+      "Script confidence: 4.19\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get information about orientation and script detection\n",
+    "print(pytesseract.image_to_osd(Image.open('blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif')))"
    ]
   },
   {
@@ -1222,27 +1223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "08075022",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "TesseractError",
-     "evalue": "(1, 'Leptonica Error in fopenReadStream: file not found: Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif Leptonica Error in pixRead: image file not found: blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif Image file blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif cannot be read! Error during processing.')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTesseractError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-e841abe1db43>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Get a searchable PDF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpytesseract\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage_to_pdf_or_hocr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'images.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextension\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'pdf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'test.pdf'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w+b'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpdf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# pdf type is bytes by default\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pytesseract/pytesseract.py\u001b[0m in \u001b[0;36mimage_to_pdf_or_hocr\u001b[0;34m(image, lang, config, nice, extension, timeout)\u001b[0m\n\u001b[1;32m    511\u001b[0m     \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextension\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlang\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    512\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 513\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mrun_and_get_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    514\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    515\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pytesseract/pytesseract.py\u001b[0m in \u001b[0;36mrun_and_get_output\u001b[0;34m(image, extension, lang, config, nice, timeout, return_bytes)\u001b[0m\n\u001b[1;32m    350\u001b[0m         }\n\u001b[1;32m    351\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 352\u001b[0;31m         \u001b[0mrun_tesseract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    353\u001b[0m         return _read_output(\n\u001b[1;32m    354\u001b[0m             \u001b[0;34mf\"{kwargs['output_filename_base']}{extsep}{extension}\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pytesseract/pytesseract.py\u001b[0m in \u001b[0;36mrun_tesseract\u001b[0;34m(input_filename, output_filename_base, extension, lang, config, nice, timeout)\u001b[0m\n\u001b[1;32m    282\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mtimeout_manager\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merror_string\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    283\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mproc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 284\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mTesseractError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_errors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_string\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    286\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTesseractError\u001b[0m: (1, 'Leptonica Error in fopenReadStream: file not found: Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif Leptonica Error in pixRead: image file not found: blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif Image file blurring tradition/Blurring Tradition and Modernity_Judy Van Zile-000001 - 0001.tif cannot be read! Error during processing.')"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Get a searchable PDF\n",
     "pdf = pytesseract.image_to_pdf_or_hocr('images.txt', extension='pdf')\n",
@@ -1274,7 +1258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1288,7 +1272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
